--- a/index.html
+++ b/index.html
@@ -14,29 +14,91 @@
     <link rel="stylesheet" href="style.css">
     <title>My web site1</title>
 </head>
-
+<body>
     <header>
         <div class="columns">
-            <div class="column is-1">
-                <a href="index.html"><img src="logo.png" alt="logo"></a>
-            </div>
+            <div class="wrap-nav">
+                <div class="column is-1">
+                    <a href="index.html"><img class="logo-img" src="img/logo.png" alt="logo"></a>
+                </div>
 
-            <div class="column is-9">
-                <div class="navbar">
-                    <div class="dropdown">
-                    <a href="#">Pages</a>
-                    <div class="dropdown-content">
-                        <a class="dd-menu" href="#">Home</a>
-                        <a class="dd-menu" href="#">Contact</a>
-                    </div>
+                <div class="column is-9">
+                    <div class="navbar">
+                        <div class="dropdown">
+                        <a>Pages</a>
+                        <div class="dropdown-content">
+                            <a class="dd-menu" href="#">Home</a>
+                            <a class="dd-menu" href="#">Contact</a>
+                        </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </header>
     <main>
-        
+        <div class="columns">
+
+            <div class="column is-2">
+                <div class="wrap-title">
+                    <h2 class="title">Some of the best:</h2>
+                </div>
+            </div>
+
+            <div class="column is-9">
+                <div class="wrap-ef">
+                    <hr style="height: 2px; border: none; background-color: rgb(0, 255, 187);">
+
+
+                    <div class="wrap-carousel">
+                        <div id="slick">
+                            <div class="slick-carousel">
+                                <div id="wrap-img">
+                                    <img src="img/FPV-1.jpeg">
+                                </div>
+                                <div id="wrap-img">  
+                                    <img src="img/FPV-2.jpeg">
+                                </div>
+                                <div id="wrap-img">
+                                    <img src="img/FPV-BEST.jpeg">
+                                </div>
+                                <div id="wrap-img">
+                                    <img src="img/FPV-build.jpeg">
+                                </div>
+                                <div id="wrap-img">
+                                    <img src="img/DJI-FPV.jpeg">
+                                </div>
+                                <div id="wrap-img">  
+                                    <img src="img/FPV-1.jpeg">
+                                </div>
+                                <div id="wrap-img">
+                                    <img src="img/FPV-BEST.jpeg">
+                                </div>
+                                <div id="wrap-img">
+                                    <img src="img/FPV-2.jpeg">
+                                </div>
+                            </div>
+                            
+                            <div id="slick-buttons">
+                                <div class="arrow_prev">
+                                    <span id="arrow">&#8592;</span>
+                                </div>
+                                <div class="arrow_next">
+                                    <span id="arrow">&#8594;</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>    
+            </div>
+        </div>
     </main>
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
