--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </label>
                     
                         <ul class="menu__box">
-                        <li><a class="menu__item" href="#">Home</a></li>
+                        <li><a class="menu__item" href="index.html">Home</a></li>
                                 <li><a class="menu__item" onclick="carouselFunction()">Carousel</a></li>
                                 <li><a class="menu__item" onclick="artFunction()">Articles</a></li>
                         </ul>
