--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <header>
         <div class="navbar-fixed">
-            <div class="columns nav-placement">
+            <div class="columns nav-placement is-mobile">
                 
                 <div class="column is-narrow" style="width: 60px;">
                     <div class="hamburger-menu">
